# nhl-cartography

./: CLAUDE.md  README.md  add_home_team_data.py  clustering.py  create_4k_star_chart.py  create_embedded_html.py  create_free_roam_html.py  create_standalone_html.py  create_star_map_html.py  embeddings.py  graph_network.ipynb  hyperparameter_exploration_results_20250730_143545.csv  identifers.py  mapping.py  mapping_static.py  plot_geojson.py  pull_data.py  pyproject.toml  sequential_clustering.py  test_home_team_addition.py  test_optimized_home_team.py  umap_hdbscan_exploration.py  umap_hdbscan_multiple_rounds.py  umap_hdbscan_sequential_format.py
.claude/: settings.local.json
data/: cluster_quality_analysis.csv  clustering_analysis_results.csv  goal_cluster_assignments.csv  nhl_goals_graph_clusters.csv  player_cache.csv  team_embeddings.csv
sequential_clustering/: clustering_config_20250725_165114.json  clustering_config_20250725_200035.json  hierarchy_20250725_165114.json  hierarchy_20250725_200035.json
